# CMakeSeries

./: .gitignore  README.md
EP-02/source/: CMakeLists.txt  main.cpp
EP-05/source/: CMakeLists.txt  main.cpp
EP-05/source/include/: dog.h
EP-07-a/source/: CMakeLists.txt
EP-07-b/source/: CMakeLists.txt
EP-07-c/source/: CMakeLists.txt  main.cpp
EP-07-c/source/logger/include/: log.h
EP-07-c/source/logger/src/: log.cpp
EP-07-c/source/src/: operations.cpp
EP-08/: CMakeLists.txt
EP-08/src/stats/: stats.cpp
EP-09/: CMakeLists.txt
EP-09/src/: main.cpp
EP-09/src/math/: maths.cmake  supermath.cpp
EP-09/src/stats/: stats.cmake
EP-10/: CMakeLists.txt
EP-10/src/stats/: CMakeLists.txt
EP-10/src/stats/include/: stats.h
