cmake_minimum_required(VERSION 3.11)
project(HelloApp
        VERSION 0.0.1
        DESCRIPTION "The leading Hellow World App"
        LANGUAGES CXX
        )
# Globing
file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
add_executable(HelloAppBinary main.cpp ${SOURCE_FILES})

# add_executable(HelloAppBinary main.cpp src/dog.cpp src/operations.cpp)

target_compile_features(HelloAppBinary PRIVATE cxx_std_20)
target_include_directories(HelloAppBinary PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
